# tinyprimesynth

./: .gitignore  LICENSE.txt  README.md  tinyprimesynth.hpp
example/: CMakeLists.txt  LICENSE (mus2midi).txt  LICENSE (music).txt  LICENSE (player).txt  LICENSE.txt  csound.sf2flac  tpsplayer-sapp.cc  tpsplayer.cc
sf2flac/: CMakeLists.txt  LICENSE  sf2flac.c
